--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: red;
 }
 
 .calculator {
@@ -24,4 +25,12 @@ button {
 
 .result {
   margin-top: 20px;
+}
+
+.button-container{
+
+}
+
+.button-reset{
+  width: 1000px;
 }
