--- a/src/components/Calculator.module.css
+++ b/src/components/Calculator.module.css
@@ -1,4 +1,4 @@
-.Calculator{
+.Calculator {
     width: 100%;
     color: rgb(122, 118, 118);
     padding: 20px;
@@ -6,19 +6,27 @@
     font-size: 18px;
     border-radius: 8px;
     margin-bottom: 20px;
-    /*display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    width: 100%;*/
+    display: flex;
+    margin-left: 550px;
 }
 
-button {
-    padding: 20px;
-    font-size: 18px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    height: 60px;
-    margin-left: 20px;
+.mainContainer {
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    height: 100vh;          
+    flex-direction: column; 
+}
+
+.BotonesContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 50px);
+    grid-gap: 10px;
+    margin-top: 0;  
+}
+
+.buttonSelected {
+    background-color: #8eb39d; /* Color verde para el número seleccionado */
+    border: 2px solid #395143;
 }
 
